5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1734_2498.log
== TEST (2019-05-07 20:24:45) 
-- CODE:
x=float(input("Digite os habitantes da cidade A: "))
y=float(input("Digite os habitantes da cidade B: "))
z=float(input("Percentual de crescimento populacional de A: )
h=float(input("Percentual de crescimento populacional de B: )
z=z/100
h=h/100
k=0
while(x<b):
		x=x*z
		y=y*h
		k=k+1
print(k)
				  
-- ERROR:
File "XXXX", line 3
    z=float(input("Percentual de crescimento populacional de A: )
                                                                ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 20:25:02) 
-- CODE:
x=float(input("Digite os habitantes da cidade A: "))
y=float(input("Digite os habitantes da cidade B: "))
z=float(input("Percentual de crescimento populacional de A: ")
h=float(input("Percentual de crescimento populacional de B: ")
z=z/100
h=h/100
k=0
while(x<b):
		x=x*z
		y=y*h
		k=k+1
print(k)
				  
-- ERROR:
File "XXXX", line 4
    h=float(input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 20:25:41) 
-- CODE:
x=float(input("Digite os habitantes da cidade A: "))
y=float(input("Digite os habitantes da cidade B: "))
z=float(input("Percentual de crescimento populacional de A: ")
h=float(input("Digite b: ")
z=z/100
h=h/100
k=0
while(x<b):
		x=x*z
		y=y*h
		k=k+1
print(k)
				  
-- ERROR:
File "XXXX", line 4
    h=float(input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 20:25:59) 
-- CODE:
x=float(input("Digite os habitantes da cidade A: "))
y=float(input("Digite os habitantes da cidade B: "))
z=float(input("Percentual de crescimento populacional de A: ")
h=float(input("")
z=z/100
h=h/100
k=0
while(x<b):
		x=x*z
		y=y*h
		k=k+1
print(k)
				  
-- ERROR:
File "XXXX", line 4
    h=float(input("")
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 20:26:34) 
-- CODE:
x=float(input("Digite os habitantes da cidade A: "))
y=float(input("Digite os habitantes da cidade B: "))
z=float(input("Percentual de crescimento populacional de A: ")
u=18
-- ERROR:
File "XXXX", line 4
    u=18
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 20:27:28) 
-- CODE:
x=float(input("Digite os habitantes da cidade A: "))
y=float(input("Digite os habitantes da cidade B: "))
z=float(input("Percentual de crescimento populacional de A: ")
u=18
-- ERROR:
File "XXXX", line 4
    u=18
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 20:27:36) 
-- CODE:
x=float(input("Digite os habitantes da cidade A: "))
y=float(input("Digite os habitantes da cidade B: "))
z=float(input("Percentual de crescimento populacional de A: ")
-- ERROR:
File "XXXX", line 4
    
                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 20:28:04) 
-- CODE:
x=float(input("Digite os habitantes da cidade A: "))
y=float(input("Digite os habitantes da cidade B: "))
z=float(input("Percentual de crescimento populacional de A: "))
h=float(Input("Percentual de cresicmento populaciona de B: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    h=float(Input("Percentual de cresicmento populaciona de B: "))
NameError: name 'Input' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 20:28:11) 
-- CODE:
x=float(input("Digite os habitantes da cidade A: "))
y=float(input("Digite os habitantes da cidade B: "))
z=float(input("Percentual de crescimento populacional de A: "))
h=float(Input("Percentual de cresicmento populaciona de B: "))
z=z/100
h=h/100
k=0
while(x<b):
		x=x*z
		y=y*h
		k=k+1
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    h=float(Input("Percentual de cresicmento populaciona de B: "))
NameError: name 'Input' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 20:28:32) 
-- CODE:
x=float(input("Digite os habitantes da cidade A: "))
y=float(input("Digite os habitantes da cidade B: "))
z=float(input("Percentual de crescimento populacional de A: "))
h=float(input("Percentual de cresicmento populaciona de B: "))
z=z/100
h=h/100
k=0
while(x<b):
		x=x*z
		y=y*h
		k=k+1
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while(x<b):
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 20:28:52) 
-- CODE:
x=float(input("Digite os habitantes da cidade A: "))
y=float(input("Digite os habitantes da cidade B: "))
z=float(input("Percentual de crescimento populacional de A: "))
h=float(input("Percentual de cresicmento populaciona de B: "))
z=z/100
h=h/100
k=0
while(x<y):
		x=x*z
		y=y*h
		k=k+1
print(k)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 20:31:13) 
-- CODE:
x=float(input("Digite os habitantes da cidade A: "))
y=float(input("Digite os habitantes da cidade B: "))
z=float(input("Percentual de crescimento populacional de A: "))
h=float(input("Percentual de cresicmento populaciona de B: "))
z=z/100
h=h/100
k=0
while(x<y):
		x=(x*z)+x
		y=(y*h)+y
		k=k+1
print(k)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 20:31:28) 
-- CODE:
x=float(input("Digite os habitantes da cidade A: "))
y=float(input("Digite os habitantes da cidade B: "))
z=float(input("Percentual de crescimento populacional de A: "))
h=float(input("Percentual de cresicmento populaciona de B: "))
z=z/100
h=h/100
k=0
while(x<y):
		x=(x*z)+x
		y=(y*h)+y
		k=k+1
print(k)
-- EXECUTION TIME:
0.205995
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 10:27:13) 
-- CODE:
x=float(input("Digite os habitantes da cidade A: "))
y=float(input("Digite os habitantes da cidade B: "))
z=float(input("Percentual de crescimento populacional de A: "))
h=float(input("Percentual de cresicmento populaciona de B: "))
z=z/100
h=h/100
k=0
while(x<y):
		x=(x*z)+x
		y=(y*h)+y
		k=k+1
print(k)
-- EXECUTION TIME:
0.287305
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
